@@ -42,6 +42,8 @@ New features:
   to verbosity 2.
 - Your account ID is now shown in readable base 10 form on login.
 - The inInventory option now checks if you have all of the items in the list.
+- "pl" command now displays what shield people are using.
+- debugPacket_received 2 option functions like a packet sniffer.
 
 New commands:
 - storage log
